--- a/pricing/Dockerfile
+++ b/pricing/Dockerfile
@@ -8,8 +8,13 @@ WORKDIR /app
 
 # Install Hex package manager.
 # By using `--force`, we don’t need to type “Y” to confirm the installation.
+RUN rm -rf _build
 RUN mix local.hex --force
 RUN mix archive.install hex phx_new
 RUN mix local.rebar --force
 RUN mix deps.get
-RUN mix phx.server
+ENV SECRET_KEY_BASE=${mix phx.gen.secret}
+ENV MIX_ENV=prod
+RUN mix compile
+RUN mix release --force
+RUN _build/dev/rel/api/bin/api daemon
